--- a/2019.html
+++ b/2019.html
@@ -12,7 +12,7 @@ title: 2019 Season
 {% for person in people %}
 
 <ul>
-<li><strong>{{ quote.quote }}</strong> ({{ quote.who said it }}, {{ quote.date it was said }})</li>
+<li><strong>{{ 2019.quote }}</strong> ({{ 2019.who said it }}, {{ 2019.date it was said }})</li>
 </ul>
 
 {% endfor %}
